--- a/src/Components/Photo/PhotoContent.module.css
+++ b/src/Components/Photo/PhotoContent.module.css
@@ -11,6 +11,9 @@
   transform: scale(0.8);
   animation: scaleUp 0.3s forwards;
 }
+.single .photo {
+  grid-template-columns: 1fr;
+}
 
 @keyframes scaleUp {
   to {
@@ -56,12 +59,12 @@
 }
 
 .visualizacoes::before {
-  content: '';
+  content: "";
   display: inline-block;
   width: 16px;
   height: 10px;
   margin-right: 0.5rem;
-  background: url('../../Assets/visualizacao-black.svg');
+  background: url("../../Assets/visualizacao-black.svg");
 }
 
 .attributes {
@@ -77,7 +80,7 @@
 }
 
 .attributes li::before {
-  content: '';
+  content: "";
   display: inline-block;
   height: 20px;
   margin-right: 0.5rem;
