--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -15,6 +15,9 @@
 }
 
 .logo {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
   padding: 0.5rem 0;
 }
 
@@ -25,11 +28,11 @@
 }
 
 .login::after {
-  content: '';
+  content: "";
   display: inline-block;
   width: 14px;
   height: 17px;
-  background: url('../Assets/usuario.svg') no-repeat center center;
+  background: url("../Assets/usuario.svg") no-repeat center center;
   margin-left: 0.5rem;
   position: relative;
   top: -1px;
